RESOLVED FIXED304227
Regression(303383@main) fast/mediastream/getUserMedia-webaudio.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=304227
Summary Regression(303383@main) fast/mediastream/getUserMedia-webaudio.html is a flak...
Chris Dumez
Reported 2025-12-15 20:25:41 PST
fast/mediastream/getUserMedia-webaudio.html is a flaky crash: ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebCore 0x3002d37e4 WTFCrashWithInfo(int, char const*, char const*, int) + 100 1 WebCore 0x300a0b984 WTF::CanMakeCheckedPtrBase<std::__1::atomic<unsigned int>, unsigned int, std::__1::atomic<bool>, (WTF::CheckedPtrDeleteCheckException)0>::decrementCheckedPtrCount() const + 132 2 WebCore 0x30468cb24 WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>::derefIfNotNull() + 56 3 WebCore 0x30468cadc WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>::~CheckedPtr() + 32 4 WebCore 0x30467bd54 WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>::~CheckedPtr() + 32 5 WebCore 0x3046dd234 WTF::VectorTypeOperations<WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>>::destruct(WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>*, WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>*) + 64 6 WebCore 0x3046e00d0 WTF::Vector<WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>::shrink(unsigned long) + 112 7 WebCore 0x3046dff64 WTF::Vector<WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>::shrinkCapacity(unsigned long) + 108 8 WebCore 0x3046a8bc4 WTF::Vector<WTF::CheckedPtr<WebCore::AudioNode, WTF::RawPtrTraits<WebCore::AudioNode>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>::clear() + 32 9 WebCore 0x3046a8858 WebCore::BaseAudioContext::uninitialize() + 468 10 WebCore 0x30465442c WebCore::AudioContext::uninitialize() + 52 11 WebCore 0x3046a9408 WebCore::BaseAudioContext::stop() + 560 12 WebCore 0x305e61114 _ZZN7WebCore22ScriptExecutionContext20stopActiveDOMObjectsEvENK3$_0clINS_15ActiveDOMObjectEEEDaRT_ + 60 13 WebCore 0x305e6109c WTF::Detail::CallableWrapper<WebCore::ScriptExecutionContext::stopActiveDOMObjects()::$_0, WebCore::ScriptExecutionContext::ShouldContinue, WebCore::ActiveDOMObject&>::call(WebCore::ActiveDOMObject&) + 40 14 WebCore 0x305e3892c WTF::Function<WebCore::ScriptExecutionContext::ShouldContinue (WebCore::ActiveDOMObject&)>::operator()(WebCore::ActiveDOMObject&) const + 184 15 WebCore 0x300066270 WebCore::ScriptExecutionContext::forEachActiveDOMObject(WTF::Function<WebCore::ScriptExecutionContext::ShouldContinue (WebCore::ActiveDOMObject&)> const&) const + 220 16 WebCore 0x30010c4f8 WebCore::ScriptExecutionContext::stopActiveDOMObjects() + 92 17 WebCore 0x30010c454 WebCore::Document::stopActiveDOMObjects() + 76 18 WebCore 0x305b1c368 WebCore::Document::commonTeardown() + 36 19 WebCore 0x305b2d780 WebCore::Document::willBeRemovedFromFrame() + 924 20 WebCore 0x306e4ff30 WebCore::LocalFrame::setView(WTF::RefPtr<WebCore::LocalFrameView, WTF::RawPtrTraits<WebCore::LocalFrameView>, WTF::DefaultRefDerefTraits<WebCore::LocalFrameView>>&&) + 180 21 WebCore 0x306e55d34 WebCore::LocalFrame::createView(WebCore::IntSize const&, std::__1::optional<WebCore::Color> const&, WebCore::IntSize const&, bool, WebCore::ScrollbarMode, bool, WebCore::ScrollbarMode, bool) + 288 22 WebKit 0x11e8ebb18 WebKit::WebLocalFrameLoaderClient::transitionToCommittedForNewPage(WebCore::LocalFrameLoaderClient::InitializingIframe) + 1044 23 WebCore 0x3000fb944 WebCore::FrameLoader::transitionToCommitted(WebCore::CachedPage*) + 2488 24 WebCore 0x30001da48 WebCore::FrameLoader::commitProvisionalLoad() + 2088 ``` I can reproduce like so: ``` run-webkit-tests --debug --no-build LayoutTests/fast/mediastream/getUserMedia-webaudio.html --repeat-each=50 ```
Attachments
Chris Dumez
Comment 1 2025-12-15 21:02:39 PST
EWS
Comment 2 2025-12-16 14:31:51 PST
Committed 304543@main (8ba228b0d3a9): <https://commits.webkit.org/304543@main> Reviewed commits have been landed. Closing PR #55459 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-16 14:32:13 PST
Note You need to log in before you can comment on or make changes to this bug.